# Scribe

./: API-REFERENCE.md  BUILD.md  CI_FIX_COMPLETE.md  CODE-VERIFICATION.md  COMPILE_VERIFICATION.md  Cargo.toml  DESIGN.md  IMPLEMENTATION-PLAN.md  LICENSE  Package.swift  README.md  RELEASE.md  RUST-REFACTOR-ANALYSIS.md  SWIFT_PACKAGE.md  TEST_RELEASE_SUMMARY.md  USAGE-GUIDE.md  VERSION-REFERENCE.md
.github/workflows/: build.yml
Sources/Scribe/: Scribe.swift
android/: USAGE.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
android/gradle/: libs.versions.toml
benches/: write_bench.rs
docs/: GETTING-STARTED.md  INTEGRATION-GUIDE.md  MACROS.md  PERFORMANCE-TUNING.md  TROUBLESHOOTING.md
examples/: README.md  basic.rs  complete.rs  console_sink_example.rs  custom_stage.rs  macro_usage.rs  metrics.rs  pipeline.rs  recovery.rs
gradle/: libs.versions.toml
ios/: Scribe.h  Scribe.m
scribe-lint/: Cargo.toml  README.md
scribe-lint/src/: arg_count.rs  arg_types.rs  error_format.rs  lib.rs  log_usage.rs  manual_format.rs  string_concat.rs  tag_length.rs
scripts/: update-package-for-release.sh
src/: caller.rs  config.rs  context.rs  error.rs  lib.rs  macros.rs  metrics.rs  sink.rs
src/outputs/: mod.rs
src/pipeline/: mod.rs  router.rs  stage.rs
src/platform/: android.rs  ios.rs  mod.rs
src/stages/: compress.rs  encrypt.rs  mod.rs
src/storage/: buffer.rs  cleanup.rs  frame.rs  manager.rs  mod.rs  recovery.rs
tests/: macro_integration_tests.rs
tests/integration/: e2e_test.rs  metrics_test.rs  recovery_test.rs
(+2 files in other folders)
