[package]
name = "scribe"
version = "0.1.0"
edition = "2021"
authors = ["Scribe Contributors"]
description = "High-performance, crash-resilient mobile logging engine written in Rust"
license = "MIT"
repository = "https://github.com/example/scribe"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# 内存映射
memmap2 = "0.9"

# 并发工具
parking_lot = "0.12"
once_cell = "1.19"
crossbeam-channel = "0.5"

# 错误处理
thiserror = "1.0"

# 序列化
byteorder = "1.5"

# CRC 校验
crc32fast = "1.4"

# 压缩
zstd = "0.13"
flate2 = "1.0"

# 加密
chacha20poly1305 = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
# Android NDK (可选)
# ndk = "0.8"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"

[[bench]]
name = "write_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
